update repo links
Signed-off-by: Vladimir Mandic <mandic00@live.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "wiki"]
   path = wiki
-  url = https://github.com/vladmandic/automatic.wiki
+  url = https://github.com/vladmandic/sdnext.wiki
   ignore = dirty
 [submodule "modules/k-diffusion"]
   path = modules/k-diffusion
