--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ piexif
 psutil
 pyyaml
 resize-right
-rich
 toml
 voluptuous
 yapf
@@ -32,6 +31,7 @@ invisible-watermark
 pi-heif
 
 # versioned
+rich==13.9.4
 safetensors==0.5.2
 tensordict==0.1.2
 peft==0.14.0
