Fix the image metadata

--- a/Dockerfile.rocm
+++ b/Dockerfile.rocm
@@ -16,7 +16,7 @@ LABEL org.opencontainers.image.source="https://github.com/vladmandic/sdnext/"
 LABEL org.opencontainers.image.licenses="AGPL-3.0"
 LABEL org.opencontainers.image.title="SD.Next"
 LABEL org.opencontainers.image.description="SD.Next: Advanced Implementation of Stable Diffusion and other Diffusion-based generative image models"
-LABEL org.opencontainers.image.base.name="https://hub.docker.com/pytorch/pytorch:2.5.1-cuda12.4-cudnn9-runtime"
+LABEL org.opencontainers.image.base.name="https://hub.docker.com/rocm/dev-ubuntu-22.04:6.3.2"
 LABEL org.opencontainers.image.version="latest"
 
 # minimum install
