--- a/configs/Dockerfile.rocm
+++ b/configs/Dockerfile.rocm
@@ -1,2 +1,84 @@
-# SD.Next Dockerfile
+# SD.Next ROCm Dockerfile
 # docs: <https://github.com/vladmandic/sdnext/wiki/Docker>
+
+# base image
+
+# rocm runtime (3gb)
+FROM rocm/dev-ubuntu-24.04:6.3.2
+
+# rocm complete (32gb), required to build flash_atten
+#FROM rocm/dev-ubuntu-24.04:6.3.2-complete
+
+# metadata
+LABEL org.opencontainers.image.vendor="SD.Next"
+LABEL org.opencontainers.image.authors="disty0"
+LABEL org.opencontainers.image.url="https://github.com/vladmandic/sdnext/"
+LABEL org.opencontainers.image.documentation="https://github.com/vladmandic/sdnext/wiki/Docker"
+LABEL org.opencontainers.image.source="https://github.com/vladmandic/sdnext/"
+LABEL org.opencontainers.image.licenses="AGPL-3.0"
+LABEL org.opencontainers.image.title="SD.Next ROCm"
+LABEL org.opencontainers.image.description="SD.Next: Advanced Implementation of Stable Diffusion and other Diffusion-based generative image models"
+LABEL org.opencontainers.image.base.name="https://hub.docker.com/r/rocm/dev-ubuntu-24.04:6.3.2"
+LABEL org.opencontainers.image.version="latest"
+
+# essentials
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends --fix-missing \
+    software-properties-common \
+    build-essential \
+    ca-certificates \
+    wget \
+    gpg \
+    git
+
+# python3.12
+RUN apt-get install -y --no-install-recommends --fix-missing \
+    python3 \
+    python3-dev \
+    python3-venv \
+    python3-pip
+
+# jemalloc is not required but it is highly recommended
+RUN apt-get install -y --no-install-recommends --fix-missing libjemalloc-dev
+ENV LD_PRELOAD=libjemalloc.so.2
+
+# cleanup
+RUN /usr/sbin/ldconfig
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# stop pip and uv from caching
+ENV PIP_NO_CACHE_DIR=true
+ENV UV_NO_CACHE=true
+
+# set paths to use with sdnext
+ENV SD_DOCKER=true
+ENV SD_DATADIR="/mnt/data"
+ENV SD_MODELSDIR="/mnt/models"
+ENV venv_dir="/mnt/python/venv"
+
+# paths used by sdnext can be a volume if necessary
+#VOLUME [ "/app" ]
+#VOLUME [ "/mnt/data" ]
+#VOLUME [ "/mnt/models" ]
+#VOLUME [ "/mnt/python" ]
+#VOLUME [ "/root/.cache/huggingface" ]
+
+# override gpu architecture for unsupported gpus
+#ENV HSA_OVERRIDE_GFX_VERSION=10.0.0
+
+# git clone and run sdnext
+RUN echo '#!/bin/bash\ngit status || git clone https://github.com/vladmandic/sdnext.git .\n/app/webui.sh "$@"' | tee /bin/startup.sh
+RUN chmod 755 /bin/startup.sh
+
+# actually run sdnext
+WORKDIR /app
+ENTRYPOINT [ "startup.sh", "-f", "--use-rocm", "--uv", "--listen", "--debug", "--api-log", "--log", "sdnext.log" ]
+
+# expose port
+EXPOSE 7860
+
+# healthcheck function
+# HEALTHCHECK --interval=60s --timeout=10s --start-period=60s --retries=3 CMD curl --fail http://localhost:7860/sdapi/v1/status || exit 1
+
+# stop signal
+STOPSIGNAL SIGINT
