add mod regional tiling
Signed-off-by: Vladimir Mandic <mandic00@live.com>

--- a/.pylintrc
+++ b/.pylintrc
@@ -36,6 +36,7 @@ ignore-paths=/usr/lib/.*$,
              modules/todo,
              modules/unipc,
              modules/xadapter,
+             modules/mod,
              repositories,
              extensions-builtin/Lora,
              extensions-builtin/sd-webui-agent-scheduler,
