add ras-sd35 experimental
Signed-off-by: Vladimir Mandic <mandic00@live.com>

--- a/.pylintrc
+++ b/.pylintrc
@@ -23,12 +23,14 @@ ignore-paths=/usr/lib/.*$,
              modules/k-diffusion,
              modules/ldsr,
              modules/meissonic,
+             modules/mod,
              modules/omnigen,
              modules/onnx_impl,
              modules/pag,
              modules/pixelsmith,
              modules/prompt_parser_xhinker.py,
              modules/pulid/eva_clip,
+             modules/ras,
              modules/rife,
              modules/schedulers,
              modules/taesd,
@@ -36,7 +38,6 @@ ignore-paths=/usr/lib/.*$,
              modules/todo,
              modules/unipc,
              modules/xadapter,
-             modules/mod,
              repositories,
              extensions-builtin/Lora,
              extensions-builtin/sd-webui-agent-scheduler,
