--- a/.ruff.toml
+++ b/.ruff.toml
@@ -17,12 +17,14 @@ exclude = [
     "modules/k-diffusion",
     "modules/ldsr",
     "modules/meissonic",
+    "modules/mod",
     "modules/omnigen",
     "modules/pag",
     "modules/pixelsmith",
     "modules/postprocess/aurasr_arch.py",
     "modules/prompt_parser_xhinker.py",
     "modules/pulid/eva_clip",
+    "modules/ras",
     "modules/rife",
     "modules/schedulers",
     "modules/segmoe",
@@ -31,7 +33,6 @@ exclude = [
     "modules/todo",
     "modules/unipc",
     "modules/xadapter",
-    "modules/mod",
     "repositories",
     "extensions-builtin/Lora",
     "extensions-builtin/sd-extension-chainner/nodes",
